css/custom.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Plus Jakarta Sans', sans-serif;    
    /* background-color: #18634B; */
}

html {
    scroll-behavior: smooth;
    background-color:  #18634B;
}

#navbar{
    min-width: 100%;
    margin-top: 0px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 30px;
    padding-top: 30px;
    padding-bottom: 30px;
    top: 0%;
    left: 0%;
    background-color:  #18634B;    
}

#createAccount
{
    color:#c116b3;
    margin-bottom: 5px;
    margin-right: 7px;
    
}
#register
{
    color:#ca7105;
    
}
#create:hover
{
    color: #bdadb7;
}
#search_bar
{
    background-color: #18634B;
    border-color: #0e0f11;
    color: white;
    
}
#search_bar:focus
{
    color: #c6c7cd;
    background-color: #3e424b;
    border-color: #0e0f11;
    box-shadow: inset 2px 2px 5px #3e424b, inset -3px -3px 7px #3e424b;
    
}
#search_btn
{
    background-color: #18634B;
    border-color: #0e0f11;
    color: white;
   
    
}
#search_btn:focus
{
    color: #c6c7cd;
    background-color: #3e424b;
    border-color: #0e0f11;
    box-shadow: inset 2px 2px 5px #3e424b, inset -3px -3px 7px #3e424b;
    
}
#search_btn:hover
{
    color: #c6c7cd;
    background-color: #3e424b;
    border-color: #0e0f11;
    box-shadow: inset 2px 2px 5px #3e424b, inset -3px -3px 7px #3e424b;
    
}

.bg-green
{
    background-color: #18634B;
}
.bg-orange
{
    background-color: #ca7105;
}
.bg-pink
{
 background-color: #aa0a72;
}

.card {
    position: relative;
    display: flex;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #18634B;
    background-clip: border-box;
    border: 0.0625rem solid rgba(243, 247, 250, 0.05);
    /*border-radius: 0.55rem;*/
    border-bottom-left-radius: 10%;
    border-bottom-right-radius: 10%;
    border-top-left-radius: 10%;
    border-top-right-radius: 10%;
    
    
}
.card-body 
{
    flex: 1 1 auto;
    padding: 3rem;
}
.card-header
{
    background-color: #18634B;
    border-color: #ca7105;
}

.form-control {
    display: block;
    width: 100%;
    height: calc(1.5em + 1.2rem + 0.0625rem);
    padding: 0.6rem 0.75rem;
    font-size: 1rem;
    font-weight: 300;
    line-height: 1.5;
    background-clip: padding-box;
    border-radius: 0.55rem;
    color: #d4d5e0;
    background-color: #18634B;
    border-color: #0e0f11;
    outline: 0;
    box-shadow: inset 2px 2px 5px #ca7105, inset -3px -3px 7px #aa0a72 !important;
    transition: all 0.3s ease-in-out;
    
   
}
.form-control::placeholder  
{
    color: #b2b3c0;
    opacity: 1;
}
.form-control:focus {
    color: #c6c7cd;
    background-color: #3e424b;
    border-color: #0e0f11;
    box-shadow: inset 2px 2px 5px #3e424b, inset -3px -3px 7px #3e424b;
}
.btn 
{
    color:  #18634B;    
}
.btn:hover {
    color: #bdadb7;
    text-decoration: none;
    
}
.btn-primary {
    color: #bdadb7;
    background-color: #18634B;
    border-color: #0e0f11;
    box-shadow: inset 2px 2px 5px #ca7105, inset -3px -3px 7px #aa0a72 !important;
}

.btn-primary:hover {
    color: #bdadb7;
    background-color: #18634B;
    border-color: #0e0f11;
    box-shadow: inset 0 1px 0 rgba(236, 240, 243, 0.15), 0 1px 1px rgba(38, 40, 51, 0.075);
}

.shadow-soft 
{

    box-shadow: 6px 6px 12px #aa0a72, -6px -6px 12px #ca7105 !important;
}

.shadow-inset 
{
    box-shadow: inset 2px 2px 5px #aa0a72, inset -3px -3px 7px #ca7105 !important;
}

.input-group-text 
{
    display: flex;
    align-items: center;
    padding: 0.6rem 0.75rem;
    margin-bottom: 0;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #828393;
    text-align: center;
    white-space: nowrap;
    background-color: #e6e7ee;
    border: 0.0625rem solid #D1D9E6;
    border-radius: 0.55rem;
   
}

.h4 /*header*/
{
    background: linear-gradient(to right, #de7d05 0%, #c60d85 100%);
    -webkit-background-clip: text;
    background-clip: text;
	-webkit-text-fill-color: transparent;
    font-size: 4rem;
    

}
.customRow
{
    
    height: 400px;
}
.customRow2
{
    /*background-color:aliceblue;*/
    height: 400px;
}
.modal
{
    overflow: hidden;
}
.modal-dialog
{
    margin-right: 50;
    margin-left: 50;
}
.modal-header
{      /* not necessary but imo important for user */
    cursor: move;
}

#spinner 
{ visibility:hidden; } 

table{
    width: 100%;
    padding-left: 30px;
    margin-right: auto;

}

#contact_title{
    font-size: 2.5rem;
}

.th_data_cell{
    font-size: 1.5rem;
    width: 30%
}

.th_button_cell{
    width: auto;
    font-size: 1.5rem;
}

.table_edit{
    width: auto;
}

.table_delete{
    width: auto;
    font-size: 1.5rem;
}

.table_data{
    font-size: 1.5rem;
    width: 30%
}



#logo{
    float: left;
    font-size: 3rem;
}

#main_content{
    width: 100%;
    padding-left: 50px;
    padding-right: 50px;
    height: auto;
    background-color: #18634B;
    color: white;
}

